snooper submission disabled (for sake of privacy)
addditionally, snooper removal is pending and snooper section will be replaced with evanescent settings such as no camera shake.